--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">AndroidLab_1</string>
     <string name="hello_message">Hello World!</string>
+    <string name="login_message">Login</string>
+    <string name="password_message">password</string>
     <string name="ButtonText">I\’m a button</string>
 </resources>
