--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,12 @@
     <string name="hello_message">Hello World!</string>
     <string name="login_message">Login</string>
     <string name="password_message">password</string>
-    <string name="ButtonText">I\’m a button</string>
+    <string name="ButtonText">I\'m a button</string>
+    <string name="dialog_message">Do you want to finish your activity?</string>
+    <string name="dialog_title">Alert Dialog</string>
+    <string name="ok">Here is my response</string>
+    <string name="StartChat">Start chat</string>
+    <string name="send">Send</string>
+    <string name="incoming_message">Incoming Message</string>
+    <string name="outgoing_message">Outgoing Message</string>
 </resources>
