--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,16 @@
     <string name="send">Send</string>
     <string name="incoming_message">Incoming Message</string>
     <string name="outgoing_message">Outgoing Message</string>
+    <string name="weather">Current weather</string>
+    <string name="Current_temperature">Current temperature</string>
+    <string name="Minimum_temperature">Minimum temperature</string>
+    <string name="Maximum_temperature">Maximum temperature</string>
+    <string name="normProgBar"></string>
+    <string name="weatherButton">Check weather</string>
+    <string name="title_activity_weather_forecast">WeatherForecast</string>
+    <string name="ottawa"> Ottawa, ON </string>
+    <string name="temperature"> temperature </string>
+    <string name="temperature_min">minimum temperature </string>
+    <string name="temperature_max">maximum temperature </string>
+
 </resources>
